<resources>
    <string name="app_name">Troubleshoot</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="order">Order</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email"> Email</string>
    <string name="prompt_password"> Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="register">Register</string>
    <string name="firstName">FirstName</string>
    <string name="lastName">LastName</string>
    <string name="orderHistory">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FullName">fullName</string>
    <string name="Telepon">telepon</string>
    <string name="Alamat">alamat</string>
    <string name="order_service">Service</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="hai">Hai,</string>
    <string name="selamat_datang_di_troubleshoot_id">Selamat Datang di Troubleshoot.id</string>
    <string name="pesan_layanan">Pesan Layanan</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="konsultasikan_sekarang">konsultasikan Sekarang</string>
    <string name="pemesanan">Pemesanan</string>
    <string name="pesan">Pesan</string>
    <string name="total_harga">Total Harga</string>
    <string name="produk">Produk</string>
    <string name="pcs">pcs</string>
    <string name="total">Total</string>
    <string name="cart">Cart</string>
    <string name="logo_trb">Logo Trb</string>
    <string name="tambah">Tambah</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="gambar_layanan">Gambar Layanan</string>
    <string name="cart_kosong">Cart Kosong</string>
    <string name="keranjang">Keranjang</string>
    <string name="tombol_back">tombol back</string>
    <string name="nama">Nama</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="kontak">Kontak</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="datang_sendiri">Datang Sendiri</string>
    <string name="antar_jemput">Antar Jemput</string>
    <string name="lokasi">Lokasi</string>
    <string name="jam">Jam</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu_pengambilan_perangkat">Waktu Pengambilan Perangkat</string>
    <string name="detail_permasalahan">Detail Permasalahan</string>
    <string name="seri_laptop">Seri Laptop</string>
    <string name="merk_laptop">Merk Laptop</string>
    <string name="ketentuan">Dengan memencet tombol \'Pesan Sekarang\' Anda setuju dengan Syarat dan Ketentuan yang Berlaku.</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="jadwal_service">Jadwal Service</string>
    <string name="ubah">Ubah</string>
    <string name="pesanan">Pesanan</string>
    <string name="bayar_sekarang">Bayar sekarang</string>
    <string name="batalkan_pemesanan">Batalkan pemesanan</string>
    <string name="klaim_garansi">Klaim Garansi</string>
    <string name="review_pelayanan">Review Pelayanan</string>
    <string name="cetak_invoice">Cetak Invoice</string>
    <string name="trbteam">TrbTeam</string>
    <string name="konfirmasi_pembayaran">Konfirmasi Pembayaran</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="history_pemesanan">History Pemesanan</string>
    <string name="kembali_ke_beranda">Kembali ke Beranda</string>
    <string name="detail">Detail</string>
    <string name="divider1">|</string>
    <string name="idlayanan">IdLayanan</string>
    <string name="catatanpembayaran">Lakukan pembayaran saat perangkat sudah selesai pemeriksaan dan mendapat update harga pasti  </string>

    <string-array name="quantity_string_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5(max)</item>
    </string-array>
</resources>