<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Fragment.HomeFragment">

    <!-- HEADER  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:background="@drawable/header_background"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/hai"
            android:textColor="@color/colordivider"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvfirstNameHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="15dp"
            android:text="@string/firstName"
            android:textColor="@color/colordivider"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/textHello"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_notification"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/textHello"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textHello"
            app:tint="@color/colordivider" />

        <TextView
            android:id="@+id/Trbdashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:text="@string/selamat_datang_di_troubleshoot_id"
            android:textColor="@color/colordivider"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/textHello"
            app:layout_constraintTop_toBottomOf="@id/tvfirstNameHome" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- End HEADER-->

    <ImageView
        android:id="@+id/imageBanner"
        android:layout_width="310dp"
        android:layout_height="195dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@id/ourService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        android:src="@drawable/teamworks"
        android:contentDescription="@string/trbteam" />

    <LinearLayout
        android:id="@+id/ourService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBanner">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pesan_layanan"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPesanSekarang"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            app:cornerRadius="20dp"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:letterSpacing="0.15"
            android:text="@string/pesan_sekarang"
            android:textColor="@color/colordivider"
            app:backgroundTint="@color/colortrb"
            app:rippleColor="?attr/colorOnSecondary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/konsultasi"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnKonsul"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            app:cornerRadius="20dp"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:letterSpacing="0.15"
            android:text="@string/konsultasikan_sekarang"
            android:textColor="@color/colordivider"
            app:backgroundTint="@color/wa"
            app:rippleColor="?attr/colorOnSecondary"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>